# neocmakelsp

./: .editorconfig  .neocmake.toml  .neocmakeformat.toml  .neocmakelint.toml  .pre-commit-hooks.yaml  .taplo.toml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  _typos.toml  cargo_wrapper.py  meson.build  settings.lua
.github/: FUNDING.yml  dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  codecov.yml  release.yml  typos.yml  zizmor.yml
assert/: Qt5QmlConfigVersion.cmake  cmake_help_modules.txt  cmake_output.txt
assert/base/: formatafter.cmake
assert/fileapi/: fileapifinal.json
assert/function/: formatafter.cmake  formatbefore.cmake
assert/gammer/: include_check.cmake
assert/highlight/: bracket_argument.cmake
assets_for_test/: Qt5QmlConfigVersion.cmake  cmake_help_commands.txt  cmake_help_variables.txt
assets_for_test/ast_test/: bast_test.cmake  nheko_test.cmake
assets_for_test/base/: formatafter.cmake  formatbefore.cmake
assets_for_test/fileapi/: api.json  cache-v2-c1f0b50299da00258c61.json
assets_for_test/function/: formatafter.cmake  formatbefore.cmake
assets_for_test/gammar/: include_check.cmake  pass_test.cmake
assets_for_test/highlight/: bracket_argument.cmake
assets_for_test/lastline/: after.cmake
completions/: neocmakelsp.fish  neocmakelsp.zsh
completions/bash/: neocmakelsp
completions/fish/: neocmakelsp.fish
completions/zsh/: _neocmakelsp
editor/vscode/: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
editor/vscode/src/: download.ts  extension.ts  github.ts  install.ts
experiment_assets/: nheko.cmake  test.cmake
misc/: document_symbol.scm  node-types.json
neocmake_complete_generator/: Cargo.toml
neocmake_complete_generator/src/: clapargs.rs  main.rs
src/: ast.rs  clapargs.rs  cli.rs  complete.rs  config.rs  consts.rs  document.rs  document_link.rs  document_symbol.rs  fileapi.rs  filewatcher.rs  format.rs  formatting.rs  gammar.rs  gammer.rs  gotodef.rs  grammar.rs  hover.rs  jump.rs  languagerserver.rs  languageserver.rs  main.rs  quick_fix.rs  rename.rs  scansubs.rs  search.rs  semantic_token.rs  shellcomplete.rs  signature_help.rs  snippets.rs  treehelper.rs  treesitter_nodetypes.rs  utils.rs
src/complete/: buildin.rs  builtin.rs  findpackage.rs  includescanner.rs
src/fileapi/: cache.rs
src/formatting/: adddefinitions.rs  functiondef.rs  ifcondition.rs  loopdef.rs  macrodef.rs  othercommand.rs  project.rs  set.rs
src/jump/: findpackage.rs  include.rs  subdirectory.rs
src/languageserver/: cache.rs  config.rs  mod.rs  rename.rs  test.rs
src/languageserver/jump/mod.rs/: jump.rs
src/utils/: findpackage.rs  query.rs  treehelper.rs  types.rs
src/utils/findpackage/: packagelinux.rs  packagemac.rs  packageunix.rs  packagewin.rs  vcpkg.rs
test/: CMakeLists.txt  DWayland.cmake  nheko.cmake  test.cmake  test1.cmake  test2.cmake  test3.cmake  test4.cmake
test/subdir/: CMakeLists.txt
tests/: completion.rs
tree-sitter-cmake/: .gitignore  CMakeLists.txt  Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-cmake/bindings/rust/: build.rs
tree-sitter-cmake/src/: grammar.json  node-types.json  parser.c
