[package]
name = "neocmakelsp"
version = "0.8.26"
edition = "2024"
license = "MIT"
description = "The Lsp for cmake"
repository = "https://github.com/neocmakelsp/neocmakelsp"
authors = ["Decodertalkers <aakari@tutanota.com>"]
keywords = ["lsp"]
rust-version = "1.89.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = { version = "4.5.60", features = ["unstable-dynamic"] }
cli-table = "0.5.0"
dirs = "6.0.0"
glob = "0.3.3"
ignore = "0.4.25"
pathdiff = "0.2.3"
regex = "1.12.2"
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower-lsp = { version = "0.24.0", package = "tower-lsp-f" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tree-sitter = "0.25.10"
tree-sitter-cmake = "0.7.1"
treesitter_kind_collector = "0.2.0"

[target.'cfg(windows)'.dependencies]
path-absolutize = "3.1.1"

[dev-dependencies]
assert_cmd = "2.1.1"
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
