[package]
name = "neocmakelsp"
version = "0.10.0"
edition = "2024"
license = "MIT"
description = "The Lsp for cmake"
repository = "https://github.com/neocmakelsp/neocmakelsp"
authors = ["Decodertalkers <aakari@tutanota.com>"]
keywords = ["lsp"]
rust-version = "1.89.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
clap_complete = { version = "4.5.65", features = ["unstable-dynamic"] }
cli-table = "0.5.0"
dashmap = "6.1.0"
etcetera = "0.11.0"
glob = "0.3.3"
ignore = "0.4.25"
pathdiff = "0.2.3"
regex = "1.12.2"
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.0"
tower-lsp = { version = "0.24.0", package = "tower-lsp-f" }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tree-sitter = "0.26.5"
tree-sitter-cmake = "0.7.1"
treesitter_kind_collector = "0.2.0"

[target.'cfg(windows)'.dependencies]
path-absolutize = "3.1.1"

[dev-dependencies]
assert_cmd = "2.1.2"
indoc = "2.0.7"
tempfile = "3.24.0"
tower = { version = "0.5.3", features = ["util"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin)"] }

[lints.clippy]
semicolon_if_nothing_returned = "warn"
unnecessary_semicolon = "warn"
